Actions
Bug #11311
closeddevctl: NULL pointer errors
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
External Bug:
Description
Build errors with NULL pointer:
In file included from /code/illumos-gate/proto/root_i386/usr/include/iso/stdio_iso.h:53:0, from /code/illumos-gate/proto/root_i386/usr/include/stdio.h:82, from devctl.c:87: devctl.c: In function 'run_list_ctlrs': /code/illumos-gate/proto/root_i386/usr/include/sys/null.h:28:14: error: passing argument 3 of 'di_walk_minor' makes integer from pointer without a cast [-Werror=int-conversion] #define NULL ((void *)0) ^ devctl.c:551:45: note: in expansion of macro 'NULL' (void) di_walk_minor(dinode, DDI_NT_NEXUS, NULL, 0, &nexif); ^~~~ In file included from devctl.c:96:0: /code/illumos-gate/proto/root_i386/usr/include/libdevinfo.h:214:13: note: expected 'uint_t {aka unsigned int}' but argument is of type 'void *' extern int di_walk_minor(di_node_t root, const char *minortype, ^~~~~~~~~~~~~ cc1: all warnings being treated as errors
Updated by Electric Monk about 4 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 1376f37367e2b1424b82940f492f2ed488f1b843
commit 1376f37367e2b1424b82940f492f2ed488f1b843 Author: Toomas Soome <tsoome@me.com> Date: 2019-07-06T14:26:17.000Z 11311 devctl: NULL pointer errors Reviewed by: Yuri Pankov <yuri.pankov@nexenta.com> Reviewed by: Sebastian Wiedenroth <sebastian.wiedenroth@skylime.net> Reviewed by: Peter Tribble <peter.tribble@gmail.com> Reviewed by: Garrett D'Amore <garrett@damore.org> Reviewed by: Andrew Stormont <andyjstormont@gmail.com> Approved by: Garrett D'Amore <garrett@damore.org>
Actions