11311 devctl: NULL pointer errors Reviewed by: Yuri Pankov <yuri.pankov@nexenta.com> Reviewed by: Sebastian Wiedenroth <sebastian.wiedenroth@skylime.net> Reviewed by: Peter Tribble <peter.tribble@gmail.com> Reviewed by: Garrett D'Amore <garrett@damore.org> Reviewed by: Andrew Stormont <andyjstormont@gmail.com> Approved by: Garrett D'Amore <garrett@damore.org>